fixing spacing of content container

--- a/main.css
+++ b/main.css
@@ -287,7 +287,7 @@ fieldset {
     height: 5vh;
     background-color: #FF8E00;
     color: #2d2d2d;
-    margin: 3vw auto auto;
+    margin: 2vw auto auto;
     border-radius: 5px;
     border: 2px solid #2d2d2d;
 }
